--- a/.sops.yaml
+++ b/.sops.yaml
@@ -7,3 +7,8 @@ creation_rules:
     - age:
       - *user_rmu
       - *server_uaq
+  - path_regex: terraform/[^/]+\.(yaml|json|env|ini)$
+    key_groups:
+    - age:
+      - *user_rmu
+
